--- a/dev/saaacartfundraiser/style/sass/components/_typography.scss
+++ b/dev/saaacartfundraiser/style/sass/components/_typography.scss
@@ -14,7 +14,6 @@ p, ul:not(.nav), address {
 
     font-weight: bold;
     font-size: 3em;
-    line-height: 300px;
 
     text-shadow: 1px 1px 3px #000;
 }
